Fixed broken style in author show search input

--- a/app/containers/unconnectedAuthorShow/authorShow.scss
+++ b/app/containers/unconnectedAuthorShow/authorShow.scss
@@ -2,6 +2,24 @@
   margin-top: $navbar_height;
 }
 
+.loadingContainer {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  margin-top: -24px;
+}
+
+.loadingSpinner {
+  text-align: center;
+  display: flex;
+  align-items: center;
+
+  div {
+    background-color: $gray3 !important;
+  }
+}
+
 .container {
   margin: 0 auto;
   max-width: $small-container-width;
@@ -35,22 +53,17 @@
 
 .paperListHeader {
   position: relative;
-  margin-bottom: 35px;
+  margin-bottom: 16px;
+  align-items: center;
   height: 40px;
   display: flex;
-
-  .paperListRight {
-    display: flex;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-  }
 }
 
-.paperListLeft {
+.paperSearchContainer {
   display: flex;
+  justify-content: space-between;
   align-items: center;
+  margin-bottom: 16px;
 }
 
 .authorClaimButton {
